--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Login"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".MainMenu"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".ProfileFragment"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".MessageFragment"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".SettingsFragment"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
