--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,8 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 android {
     compileSdk 31
 
