--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".ListOfChatsActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".MainMenu"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
