--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         </activity>
         <activity android:name=".activities.GroupActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activities.GroupChatActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activities.ListOfGroupsActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Login"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".activities.LoginActivity"
